--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Dem Fonts</title>
         
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="scss/stylesheet.css" />
+        <link rel="stylesheet" href="css/stylesheet.css" />
         <link href='https://fonts.googleapis.com/css?family=Karla:400,700' rel='stylesheet' type='text/css'>
     </head>
     
