--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         
         <!-- JS -->
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-        <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-        <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>
         <script src="app/main.js"></script>
         <script src="js/functions.js"></script>
     </head>
