--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
@@ -30,10 +31,10 @@
                 <div class="collapse navbar-toggleable-sm" id="main-menu">
                     <ul class="nav nav-inline">
                         <li class="nav-item">
-                            <a href="#" class="nav-link active">Home</a>
+                            <a href="index.html" class="nav-link active">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">About</a>
+                            <a href="about.html" class="nav-link">About</a>
                         </li>
                         <li class="nav-item">
                             <a href="#" class="nav-link">Our Work</a>
@@ -42,7 +43,7 @@
                             <a href="#" class="nav-link">Careers</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Contact</a>
+                            <a href="contact.html" class="nav-link">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -91,7 +92,7 @@
                     </g>
                     <g class="tank">
 
-                    		<path fill="#E85763" stroke="#333333" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="
+                    		<path fill="#e84e0e" stroke="#333333" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="
                     		M171.4,194.9V85.2c0-11.8-9.6-26.6-21.4-26.6s-21.4,14.8-21.4,26.6v109.6H171.4z"/>
                     	<path opacity="0.1" d="M150,58.7c-2.9,0-5.7,0.9-8.3,2.5c1-0.2,1.9-0.3,2.9-0.3c11.8,0,21.4,14.8,21.4,26.6v107.5h5.3V85.2
                     		C171.4,73.5,161.8,58.7,150,58.7z"/>
