Updated styles. Added new titles and contact form.

--- a/about.html
+++ b/about.html
@@ -54,8 +54,12 @@
 
             <section class="module bg-white p-y-4">
 
-                <div class="container">
-                    <h1 class="section-title title-rule text-xs-center m-b-2">About Us</h1>
+                <div class="container content">
+                    
+                    <div class="multi-title m-b-2">
+                        <h2 class="bg-title">Who We Are</h2>
+                        <h1 class="fg-title title-rule">About Us</h1>
+                    </div>
 
                     <p class="text-lg font-weight-bold">
                         Team Rocket is a digital branding, website design and interactive studio based in Manchester, UK that connects brands with people in a digital world
