Updated err thing

--- a/about.html
+++ b/about.html
@@ -22,31 +22,33 @@
     <body>
         <header class="header text-xs-center">
             <nav class="navbar navbar-fixed-top p-a-0">
-                <a class="navbar-brand" href="index.html">Team Rocket Logo</a>
+                <div class="container inner">
+                    <a class="navbar-brand" href="index.html">
+                        <img class="logo img-fluid" src="images/logo-sml.png" alt="Team Rocket"> 
+                    </a>
 
-                <button class="navbar-toggler hidden-md-up text-xs-right" type="button" data-toggle="collapse" data-target="#main-menu">
-                    &#9776;
-                </button>
+                    <button class="navbar-toggler hidden-md-up" type="button" data-toggle="collapse" data-target="#main-menu">
+                        &#9776;
+                    </button>
 
-                <div class="collapse navbar-toggleable-sm" id="main-menu">
-                    <ul class="nav nav-inline">
-                        <li class="nav-item">
-                            <a href="index.html" class="nav-link active">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="about.html" class="nav-link">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">Our Work</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">Careers</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="contact.html" class="nav-link">Contact</a>
-                        </li>
-                    </ul>
+                    <div class="collapse navbar-toggleable-sm" id="main-menu">
+                        <ul class="nav nav-inline">
+                            <li class="nav-item">
+                                <a href="about.html" class="nav-link">About</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#" class="nav-link">Our Work</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#" class="nav-link">Careers</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="contact.html" class="nav-link">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
+                
             </nav>
         </header>
 
@@ -122,9 +124,7 @@
         <script src="js/tether.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDhTu8Am2BFyRO8jFprLH7RQyRwA9Lvvi0"></script>
-        <!--<script src="https://use.fontawesome.com/d67550b28c.js"></script>-->
         <script src="js/functions.js"></script>
-        <script src="js/map.js"></script>
 
     </body>
 </html>
