Updated about content

--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
                     </div>
 
                     <p class="text-lg font-weight-bold">
-                        Team Rocket is a digital branding, website design and interactive studio based in Manchester, UK that connects brands with people in a digital world
+                        Team Rocket is a digital branding, website design and interactive agency based in Manchester, UK that connects brands with people in a digital world.
                     </p>
                     <p>
                         We are a team of close friends who share the same passion. <em>Fueled by Passion</em> is one of our many motto's; the passion to create, to develop and to deliver amazing products that effect peoples lives and adhere to business growth.
@@ -82,6 +82,17 @@
             <section class="module bg-off-white p-y-2">
                 <div class="container">
                     <h2 class="section-title title-rule">Meet the Team</h2>
+
+                    <div class="row">
+                        <div class="col-xs-12 col-md-6 col-lg-4">
+                            <img class="img-fluid img-circle" src="http://placehold.it/150x150" alt="Team Member">
+
+                            <div class="img-overlay">
+                                <strong>Staff Member Name</strong><br>
+                                <em>Co-Owner/Lead Developer</em>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
 
