Updated some stylies

--- a/careers.html
+++ b/careers.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en-GB">
     <head>
-        <title>About Us | Team Rocket</title>
+        <title>Careers | Team Rocket</title>
 
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=Edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <script src="https://use.fontawesome.com/ac35b6e195.js"></script>
 
         <!-- CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
@@ -40,7 +42,7 @@
                                 <a href="#" class="nav-link">Our Work</a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">Careers</a>
+                                <a href="careers.html" class="nav-link">Careers</a>
                             </li>
                             <li class="nav-item">
                                 <a href="contact.html" class="nav-link">Contact</a>
@@ -125,7 +127,7 @@
                 <div class="row text-xs-left">
 
                     <div class="col-xs-12 col-md-4">
-                        <h4>Contact</h4>
+                        <h4 class="title-rule rule-underline">Contact</h4>
 
                         <address>
                             123 Fake St,<br>
@@ -138,7 +140,17 @@
                     </div>
 
                     <div class="col-xs-12 col-md-8">
-
+                        <ul class="list-inline">
+                            <li class="list-inline-item">
+                                <a href="#"><span class="fa fa-facebook"></span></a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="#"><span class="fa fa-twitter"></span></a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="#"><span class="fa fa-linkedin"></span></a>
+                            </li>
+                        </ul>
                     </div>
 
                 </div>
