--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 
         <!-- Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet" type="text/css">
-        <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet" type="text/css">
 
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" >
     </head>
@@ -40,7 +39,7 @@
                                 <a href="#" class="nav-link">Our Work</a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">Careers</a>
+                                <a href="careers.html" class="nav-link">Careers</a>
                             </li>
                             <li class="nav-item">
                                 <a href="contact.html" class="nav-link">Contact</a>
@@ -184,11 +183,57 @@
 
             </section>
 
-            <section class="clients-list module bg-off-white p-y-2 text-xs-center">
+            <section class="module bg-inverse p-y-3 text-xs-center">
+                <div class="container">
+
+                    <div class="multi-title m-b-2">
+                        <h2 class="bg-title">Our Message</h2>
+                        <h1 class="fg-title title-rule">About Us</h1>
+                    </div>
+
+                    <div class="row">
+
+                        <div class="col-xs-12 col-md-4">
+                            <h3 class="title-muted m-b-2">Branding</h3>
+
+                            <ul class="list-unstyled border-list">
+                                <li>Brand Strategy</li>
+                                <li>Graphic Design</li>
+                                <li>Visual Identity</li>
+                            </ul>
+                        </div>
+
+                        <div class="col-xs-12 col-md-4">
+                            <h3 class="title-muted m-b-2">Digital</h3>
+
+                            <ul class="list-unstyled border-list">
+                                <li>Content Management Systems</li>
+                                <li>E-Commerce</li>
+                                <li>Interaction Design</li>
+                                <li>Website Design</li>
+                            </ul>
+                        </div>
+
+                        <div class="col-xs-12 col-md-4">
+                            <h3 class="title-muted m-b-2">Content</h3>
+
+                            <ul class="list-unstyled border-list">
+                                <li>Content &amp; Creative Assistance</li>
+                                <li>Copywriting</li>
+                                <li>Search Engine Optimisation</li>
+                            </ul>
+                        </div>
+
+                    </div>
+
+                </div>
+            </section>
+
+            <section class="clients-list module bg-off-white p-y-3 text-xs-center">
 
                 <div class="container">
 
-                    <h3 class="section-title subtitle m-b-2">Some of our <span>Clients</span></h3>
+                    <h3 class="section-title subtitle m-b-3">Some of our <span>Clients</span></h3>
 
                     <ul class="row list-inline m-b-0">
 
@@ -238,10 +283,6 @@
 
                 </div>
 
-            </section>
-
-            <section class="cd-intro">
-                
             </section>
 
             <section class="testimonials module bg-white p-y-3 text-xs-center">
@@ -298,10 +339,6 @@
                     </div>
 
                 </div>
-            </section>
-
-            <section class="">
-
             </section>
 
             <section class="contact-intro bg-inverse bg-wired module p-t-3 text-xs-center">
